--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "canvas": "latest",
     "expect": "1.20.2",
     "jsdom": "latest",
-    "mocha": "latest",
+    "mocha": "^5.0.4",
     "request": "^2.83.0",
     "webpack": "3.11"
   }
